# template-c-project

./: .gitignore  CMakeLists.txt  README.md  main.c
ext/log_c/src/: log.h
src/: dns.c  dns.h  utils.h
src/utils/: logging.c  logging.h  memory.c  memory.h  utils.c
